<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">模拟考试系统</string>
    <string name="top_title">欢迎进入模拟考试系统</string>
    <string name="action_settings">Settings</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_user_password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="comment">如有疑问请联系我们\n联系电话：0791-83840363\nE-mail:iet2011@163.com\n网址：http://iet.jxufe.cn</string>

</resources>
